# fact

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  benchmarking.md  configuration.md  installation.md  middleware.md  quickstart.md  roadmap.md  storage.md
examples/: main.py
fact_core/: __init__.py  clickhouse_optimizations.sql  clickhouse_schema.sql  config.py  metrics.py  middleware.py  postgres_schema.sql  storage.py  validation.py
scripts/: benchmark.py
tests/: test_metrics.py  test_pipeline.py  test_storage_reliability.py  test_validation.py
